--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="dist/theme/white.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
-
-		<script src="dist/reveal.js"></script>
+				<section data-markdown="pitch.md"
+							data-separator="^\n\n\n"
+							data-separator-vertical="^\n\n"
+							data-separator-notes="^Note:"
+							data-charset="iso-8859-15">
+						<!--
+							Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
+							For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
+						-->
+                </section>
+            </div>
+        </div>
+        <script src="dist/reveal.js"></script>
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
